perf: mejorada la performance del backend para obtener las cargas